# slack-status-sync

./: .gitignore  README.md  docker-compose.yaml
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
client/public/: index.html  manifest.json
client/src/: App.tsx  index.css
client/src/components/: AuthWrapper.tsx  AuthenticatedHomePage.tsx  AuthenticatedLayout.tsx  ButtonAddToSlack.tsx  ButtonAuthentication.tsx  ButtonPrimary.tsx  CalendarEventBlock.tsx  CalendarEventsList.tsx  CalendarSelect.tsx  EmojiSelect.tsx  ErrorMessage.tsx  Event.tsx  HomePage.tsx  Layout.tsx  LoadingSpinner.tsx  Modal.tsx  ModalHowItWorks.tsx  StatusEvent.tsx  StatusEventBlock.tsx  StatusEventCreateForm.tsx  StatusEventEditForm.tsx  StatusEventsList.tsx  UnauthenticatedHomePage.tsx  UnauthenticatedLayout.tsx
client/src/hooks/: useAuthentication.tsx
client/src/utils/: auth.ts  date.ts  emoji.ts  storage.ts  types.ts  utils.ts
server/: Dockerfile  main.py  pyproject.toml
server/src/: database.py  models.py  server.py
