[project]
name = "slack-status-sync-server"
version = "0.1.0"
description = "Server for Slack Status Sync CS1660 Final Project"
authors = [
    {name = "Maximus Hayes",email = "maxhayes17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-cloud-firestore (>=2.20.1,<3.0.0)",
    "google-api-python-client (>=2.164.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "firebase-admin (>=6.7.0,<7.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
